--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,15 @@
 .env.development.local
 .env.test.local
 .env.production.local
+package-lock.json
+package.json
+.firebaserc
+database.rules.json
+firebase.json
+firestore.indexes.json
+firestore.rules
+webpack.js
+
 
 npm-debug.log*
 yarn-debug.log*
