--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@emotion/core": "^10.0.9",
     "@emotion/styled": "^10.0.9",
     "ajv": "^6.10.0",
+    "emotion": "^10.0.9",
     "nuka-carousel": "^4.4.0",
     "pure-react-carousel": "^1.13.2",
     "react": "^16.5.2",
