--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-media": "^1.9.2",
+    "react-responsive": "^6.1.1",
     "react-responsive-carousel": "^3.1.42",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
