--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-media": "^1.9.2",
+    "react-redux": "^7.0.2",
     "react-responsive": "^6.1.1",
     "react-responsive-carousel": "^3.1.42",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.0.4"
+    "react-scripts": "2.0.4",
+    "redux": "^4.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
